# euler

./: .gitignore  Euler.cabal  euler.cabal  stack.yaml
src/: Euler.hs
src/Data/Bool/: Euler.hs
src/Data/Digits/: Euler.hs
src/Data/Foldable/: Euler.hs
src/Data/List/: Euler.hs
src/Data/Text/: Euler.hs
src/Data/Text/Euler/: Internal.hs
src/Data/Tuple/: Euler.hs
src/Euler/: Bool.hs  Calendar.hs  Currency.hs  Data.hs  Digits.hs  Foldable.hs  Grid.hs  List.hs  Math.hs  Poker.hs  Pyramid.hs  Ring.hs  Secret.hs  Spiral.hs  Text.hs  Text.hs-boot  Triangle.hs  Tuple.hs  Util.hs
src/Euler/Data/: Bool.hs  Digits.hs  Foldable.hs  List.hs  Tuple.hs
src/Euler/Math/: Internal.hs
src/Euler/Text/: Internal.hs
tests/: EulerSpec.hs  EulerTest.hs  Spec.hs
tests/Data/List/: EulerSpec.hs
tests/Euler/: GridSpec.hs  ListSpec.hs  MathSpec.hs  PokerSpec.hs
tests/Euler/Data/: ListSpec.hs
