name:                Euler
version:             0.1.0.0
synopsis:            Project Euler solutions
description:         Project Euler solutions
homepage:            https://github.com/mdippery/euler#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Dippery
maintainer:          michael@monkey-robot.com
copyright:           2017 Michael Dippery
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Euler, Euler.Math, Euler.Text, Euler.Util
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
