name:                euler
version:             1.0.0
synopsis:            Project Euler solutions
description:         Project Euler solutions
homepage:            https://github.com/mdippery/euler#readme
license:             BSD3
-- license-file:        LICENSE
author:              Michael Dippery
maintainer:          michael@monkey-robot.com
copyright:           2017 Michael Dippery
category:            Education
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

library
  exposed-modules:
    Euler,
    Euler.Data,
    Euler.Grid,
    Euler.List,
    Euler.Math,
    Euler.Text,
    Euler.Tuple
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    array >= 0.5.2.0,
    data-ordlist >= 0.4.7.0,
    digits >= 0.3.1

test-suite tests
  type:               exitcode-stdio-1.0
  main-is:            EulerTest.hs
  hs-source-dirs:     tests
  default-language:   Haskell2010
  build-depends:
    base,
    euler,
    hspec
