name:                euler
version:             1.0.0.0
synopsis:            Project Euler solutions
description:         Project Euler solutions
homepage:            https://github.com/mdippery/euler#readme
license:             PublicDomain
license-file:        LICENSE
author:              Michael Dippery
maintainer:          michael@monkey-robot.com
copyright:           2019 Michael Dippery
category:            Education
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

library
  exposed-modules:
    Euler,
    Euler.Bool,
    Euler.Calendar,
    Euler.Currency,
    Euler.Data,
    Euler.Foldable,
    Euler.Grid,
    Euler.List,
    Euler.Math,
    Euler.Poker,
    Euler.Pyramid,
    Euler.Secret,
    Euler.Spiral,
    Euler.Text,
    Euler.Triangle,
    Euler.Tuple
  other-modules:
    Euler.Math.Internal,
    Euler.Text.Internal
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 4.12,
    array >= 0.5.1.1,
    data-ordlist >= 0.4.7.0,
    dates >= 0.2.2.1,
    digits >= 0.3.1,
    split >= 0.2.3.2,
    unordered-containers >= 0.2.9.0

test-suite tests
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    EulerSpec,
    Euler.GridSpec,
    Euler.ListSpec,
    Euler.MathSpec,
    Euler.PokerSpec
  hs-source-dirs:     tests
  default-language:   Haskell2010
  build-depends:
    base,
    euler,
    hspec
